--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,12 @@
 .App-link {
   color: #61dafb;
 }
-
+.setbtn{
+  width: 110px;
+  height: 44px;
+  padding: 5px;
+  
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
